--- a/index.html
+++ b/index.html
@@ -8,5 +8,36 @@
 </head>
 <body>
 
+<header>
+
+<nav>
+  <li><a href="#">Buy Ticket</a></li>
+  <li><a href="#">Products</a></li>
+  <li><a href="#">About us</a></li>
+</nav>
+
+<h1>OTTAWA ORCHARD</h1>
+<p>Come join us to enjoy the best time of the season at the Ottawa Orchard. Fun for Everyone!
+Reserve your visit</p>
+
+
+
+</header>
+
+
+
+<main>
+
+
+</main>
+
+
+
+<footer>
+
+</footer>
+
+
+
 </body>
 </html>
