Create my ol inside my first section

--- a/index.html
+++ b/index.html
@@ -8,25 +8,49 @@
 </head>
 <body>
 
-<header>
+  <header>
 
-<nav>
-  <li><a href="#">Buy Ticket</a></li>
-  <li><a href="#">Products</a></li>
-  <li><a href="#">About us</a></li>
-</nav>
+    <nav>
+      <li><a href="#">Buy Ticket</a></li>
+      <li><a href="#">Products</a></li>
+      <li><a href="#">About us</a></li>
+    </nav>
 
-<h1>OTTAWA ORCHARD</h1>
-<p>Come join us to enjoy the best time of the season at the Ottawa Orchard. Fun for Everyone!
-Reserve your visit</p>
+    <div class="banner">
+      <img src="" alt="">
+      <h1>OTTAWA ORCHARD</h1>
+      <p>Come join us to enjoy the best time of the season at the Ottawa Orchard. Fun for Everyone!
+        Reserve your visit</p>
+        <a href="#">Reserve your visit</a>
+      </div>
 
-
-
-</header>
-
-
+    </header>
 
 <main>
+
+  <section>
+    <ol>
+      <li>
+        <img src="" alt="">
+        <a href="#">Apple Picking</a>
+        Sept 3- Oct 23
+      </li>
+
+      <li>
+        <img src="" alt="">
+        <a href="#">Pumpkin Patch</a>
+        Sept 27-Oct 23
+      </li>
+
+      <li>
+        <img src="" alt="">
+        <a href="#">Christmas Trees</a>
+        Nov 27- Dec 23
+      </li>
+    </ol>
+
+</section>
+
 
 
 </main>
