Add the contact section to the html

--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
   <header>
 
     <nav>
-      <li><a href="#">Buy Ticket</a></li>
-      <li><a href="#">Products</a></li>
-      <li><a href="#">About us</a></li>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Products</a></li>
+        <li><a href="#">About us</a></li>
+      </ul>
     </nav>
 
     <div class="banner">
@@ -26,42 +28,54 @@
 
     </header>
 
-<main>
+    <main>
 
-  <section>
-    <ol>
-      <li>
-        <img src="" alt="">
-        <a href="#">Apple Picking</a>
-        Sept 3- Oct 23
-      </li>
+      <section class="cards">
+        <ol>
+          <li>
+            <img src="" alt="">
+            <a href="#">Apple Picking</a>
+            <p><time>Sept 3- Oct 23</time></p>
+          </li>
 
-      <li>
-        <img src="" alt="">
-        <a href="#">Pumpkin Patch</a>
-        Sept 27-Oct 23
-      </li>
+          <li>
+            <img src="" alt="">
+            <a href="#">Pumpkin Patch</a>
+            <p><time>Sept 27-Oct 23</time></p>
+          </li>
 
-      <li>
-        <img src="" alt="">
-        <a href="#">Christmas Trees</a>
-        Nov 27- Dec 23
-      </li>
-    </ol>
+          <li>
+            <img src="" alt="">
+            <a href="#">Christmas Trees</a>
+            <p><time>Nov 27- Dec 23</time></p>
+          </li>
+        </ol>
 
-</section>
+      </section>
+
+      <div class="contact">
+        <address class="contact">
+          Contact Us <br>
+          742 Applewood Street <br>
+          Ottawa, Ontario, Canada <br>
+          JP2 6y8 <br>
+        </address>
+
+        <p>Open from Monday to Friday, 10am to 5pm <br>
+          Saturday, Sunday, 9am to 6 pm</p>
+
+          <img src="" alt="Image of a map to situate where the Orchard is">
+        </div>
+
+      </main>
 
 
 
-</main>
+      <footer>
+
+      </footer>
 
 
 
-<footer>
-
-</footer>
-
-
-
-</body>
-</html>
+    </body>
+    </html>
