Create the 2 other html pages

--- a/index.html
+++ b/index.html
@@ -34,19 +34,19 @@
         <ol>
           <li>
             <img src="" alt="">
-            <a href="#">Apple Picking</a>
+            <a href="#"><h2>Apple Picking</h2></a>
             <p><time>Sept 3- Oct 23</time></p>
           </li>
 
           <li>
             <img src="" alt="">
-            <a href="#">Pumpkin Patch</a>
+            <a href="#"><h2>Pumpkin Patch</h2></a>
             <p><time>Sept 27-Oct 23</time></p>
           </li>
 
           <li>
             <img src="" alt="">
-            <a href="#">Christmas Trees</a>
+            <a href="#"><h2>Christmas Trees</h2></a>
             <p><time>Nov 27- Dec 23</time></p>
           </li>
         </ol>
@@ -69,9 +69,11 @@
 
       </main>
 
-
-
       <footer>
+Can wait to see you!
+Ottawa ORCHARD
+logo
+
 
       </footer>
 
