Add the proper links to my navigation

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
     <nav>
       <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Products</a></li>
-        <li><a href="#">About us</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="orchard/products.html">Products</a></li>
+        <li><a href="orchard/about.html">About us</a></li>
       </ul>
     </nav>
 
