Add role to my index.html code

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
 </head>
-<body>
 
+<body>
   <header>
 
-    <nav>
+    <nav role="navigation">
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="orchard/products.html">Products</a></li>
@@ -18,17 +18,17 @@
       </ul>
     </nav>
 
-    <div class="banner">
+    <div class="banner" role="banner">
       <img src="" alt="">
       <h1>OTTAWA ORCHARD</h1>
       <p>Come join us to enjoy the best time of the season at the Ottawa Orchard. Fun for Everyone!
         Reserve your visit</p>
         <a href="#">Reserve your visit</a>
-      </div>
+    </div>
 
-    </header>
+  </header>
 
-    <main>
+    <main role="main">
 
       <section class="cards">
         <ol>
@@ -69,15 +69,14 @@
 
       </main>
 
-      <footer>
-Can wait to see you!
-Ottawa ORCHARD
-logo
-
-
+      <footer role="complementary">
+        <div class="footer">
+          <p>Can wait to see you!</p>
+          <h3>Ottawa ORCHARD</h3>
+          <img src="#" alt="image of the logo">
+        </div>
       </footer>
 
-
-
     </body>
+
     </html>
