Create appropriate tags for each section of the product page

--- a/orchard/products.html
+++ b/orchard/products.html
@@ -6,36 +6,62 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="../css/main.css" rel="stylesheet">
 </head>
+
 <body>
 
+  <header>
 
-  Buy Ticket
-  Home
+    <nav role="navigation">
+      <ul>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="#">Buy Ticket</a></li>
+      </ul>
+    </nav>
 
-  Apple picking Sept 3- Oct 23
+    <div class="banner2">
+      <h1>Ottawa Orchard</h1>
+      <img src="" alt="banner image">
+    </div>
 
-  Activities on the site:
-  Churros
-  Bonfire
-  Farm animals
-  Apple cider
+  </header>
 
-  McIntosh
-  Mid-September to End of September
-  Tasty and juicy, those apples are perfect for juice and cider. Because of its soft flesh it is also a good option for pies and apple sauce.
+<main>
 
+  <section class="apple">
 
-  Paula Red
-  Mid-August to Mid-September
-  This is a good variety of apple to eat fresh. They become extremely soft when they are cooked, that makes Paula Red perfect for your apple sauce.
+  <h2>Apple picking</h2>
+  <p><time>Sept 3- Oct 23</time></p>
 
-  Cortland
-  Late September- early October
-  Crisp and sweet, they are good for dessert and served in a salad or cheese plate. The flesh doesn’t discolor quickly! Also very good when cooked, you can make the best pies and crumbles with them.
+  <ul class="activities">
+    <h3>Activities on the site</h3>
+    <li>Churros</li>
+    <li>Bonfire</li>
+    <li>Farm animals</li>
+    <li>Apple cider</li>
+  </ul>
 
-  Lobo
-  Early September
-  The Lobo keeps its shape during cooking and is a bit more acidic, less sweet. That makes a good choice to make pies and crumbles.
+<div class="applepicking">
+
+<dl class="mcintosh">
+  <dt>McIntosh</dt>
+  <dd>Mid-September to End of September</dd>
+  <dd>Tasty and juicy, those apples are perfect for juice and cider. Because of its soft flesh it is also a good option for pies and apple sauce.</dd>
+
+    <dt>Paula Red</dt>
+    <dd>Mid-August to Mid-September</dd>
+    <dd>This is a good variety of apple to eat fresh. They become extremely soft when they are cooked, that makes Paula Red perfect for your apple sauce.</dd>
+
+  <dt>Cortland</dt>
+  <dd>Late September- early October</dd>
+  <dd>Crisp and sweet, they are good for dessert and served in a salad or cheese plate. The flesh doesn’t discolor quickly! Also very good when cooked, you can make the best pies and crumbles with them.</dd>
+
+  <dt>Lobo</dt>
+<dd>Early September</dd>
+  <dd>The Lobo keeps its shape during cooking and is a bit more acidic, less sweet. That makes a good choice to make pies and crumbles.</dd>
+  </dl>
+
+</div>
+  </section>
 
   Pumpkin Patch Sept 27-Oct 23
 
@@ -59,9 +85,11 @@
 
   -	Christmas trees can be the host of a lot on unwanted critters and bugs. Make sure to shake it carefully before bringing in inside your home.
 
+</main>
 
+<footer>
 
-
+</footer>
 
 </body>
 </html>
