Set up my pumpkin section inside product page

--- a/orchard/products.html
+++ b/orchard/products.html
@@ -25,71 +25,92 @@
 
   </header>
 
-<main>
+  <main>
 
-  <section class="apple">
+    <section class="apple">
 
-  <h2>Apple picking</h2>
-  <p><time>Sept 3- Oct 23</time></p>
+      <h2>Apple picking</h2>
+      <p><time>Sept 3- Oct 23</time></p>
 
-  <ul class="activities">
-    <h3>Activities on the site</h3>
-    <li>Churros</li>
-    <li>Bonfire</li>
-    <li>Farm animals</li>
-    <li>Apple cider</li>
-  </ul>
+      <ul class="activities">
+        <h3>Activities on the site</h3>
+        <li>Churros</li>
+        <li>Bonfire</li>
+        <li>Farm animals</li>
+        <li>Apple cider</li>
+      </ul>
 
-<div class="applepicking">
+      <div class="applepicking">
 
-<dl class="mcintosh">
-  <dt>McIntosh</dt>
-  <dd>Mid-September to End of September</dd>
-  <dd>Tasty and juicy, those apples are perfect for juice and cider. Because of its soft flesh it is also a good option for pies and apple sauce.</dd>
+        <h3>Our delicious Apple varieties</h3>
 
-    <dt>Paula Red</dt>
-    <dd>Mid-August to Mid-September</dd>
-    <dd>This is a good variety of apple to eat fresh. They become extremely soft when they are cooked, that makes Paula Red perfect for your apple sauce.</dd>
+        <dl class="mcintosh">
+          <dt>McIntosh</dt>
+          <dd>Mid-September to End of September</dd>
+          <dd>Tasty and juicy, those apples are perfect for juice and cider. Because of its soft flesh it is also a good option for pies and apple sauce.</dd>
 
-  <dt>Cortland</dt>
-  <dd>Late September- early October</dd>
-  <dd>Crisp and sweet, they are good for dessert and served in a salad or cheese plate. The flesh doesn’t discolor quickly! Also very good when cooked, you can make the best pies and crumbles with them.</dd>
+          <dt>Paula Red</dt>
+          <dd>Mid-August to Mid-September</dd>
+          <dd>This is a good variety of apple to eat fresh. They become extremely soft when they are cooked, that makes Paula Red perfect for your apple sauce.</dd>
 
-  <dt>Lobo</dt>
-<dd>Early September</dd>
-  <dd>The Lobo keeps its shape during cooking and is a bit more acidic, less sweet. That makes a good choice to make pies and crumbles.</dd>
-  </dl>
+          <dt>Cortland</dt>
+          <dd>Late September- early October</dd>
+          <dd>Crisp and sweet, they are good for dessert and served in a salad or cheese plate. The flesh doesn’t discolor quickly! Also very good when cooked, you can make the best pies and crumbles with them.</dd>
 
-</div>
-  </section>
+          <dt>Lobo</dt>
+          <dd>Early September</dd>
+          <dd>The Lobo keeps its shape during cooking and is a bit more acidic, less sweet. That makes a good choice to make pies and crumbles.</dd>
+        </dl>
 
-  Pumpkin Patch Sept 27-Oct 23
-
-  6 acres of pumpkins! Come enjoy the tractor ride around the field and choose the perfect pumpkins for your family.
-
-  Fun Facts about Pumpkins:
-  The word pumpkin comes from the Greek word, pepon, which means a large melon.
-  The latest U.S. record (2019) for the largest pumpkin ever grown weighed in at 2,517.5 pounds.
-  Pumpkins were once considered a remedy for freckles and snakebites.
+      </div>
+    </section>
 
 
-  Christmas Tree Nov 27- Dec 23
+    <section class="pumpkin">
 
-  10 acres of Christmas tree! Come enjoy the magical tractor ride around the enchanted tree’s forest. Light and music will make this experience like no other!
+      <h2>Pumpkin Patch</h2>
+      <p><time>Sept 27- Oct 23</time></p>
 
-  Fun facts about Christmas Trees
+      <ul class="activities">
+        <h3>Activities on the site</h3>
+        <li>Churros</li>
+        <li>Bonfire</li>
+        <li>Farm animals</li>
+        <li>Pumpkin spice latte</li>
+      </ul>
 
-  -	A Fraser fir tree can take up to 8 years to grow to the size of 7 feet tall, which is the average Christmas tree size.
+      <div class="pumpkinpatch">
 
-  -	If the tree is cut at the end of December, later in the season, its needles as more chance to stay on the branches and for you to keep your tree longer in the house.
+        <p>6 acres of pumpkins! Come enjoy the tractor ride around the field and choose the perfect pumpkins for your family.</p>
 
-  -	Christmas trees can be the host of a lot on unwanted critters and bugs. Make sure to shake it carefully before bringing in inside your home.
+        <h3>Fun Facts about Pumpkins</h3>
+        <ul>
+          <li>The word pumpkin comes from the Greek word, pepon, which means a large melon.</li>
+          <li>The latest U.S. record (2019) for the largest pumpkin ever grown weighed in at 2,517.5 pounds.</li>
+          <li>Pumpkins were once considered a remedy for freckles and snakebites.</li>
+        </ul>
 
-</main>
+      </div>
+    </section>
 
-<footer>
 
-</footer>
+    Christmas Tree Nov 27- Dec 23
+
+    10 acres of Christmas tree! Come enjoy the magical tractor ride around the enchanted tree’s forest. Light and music will make this experience like no other!
+
+    Fun facts about Christmas Trees
+
+    -	A Fraser fir tree can take up to 8 years to grow to the size of 7 feet tall, which is the average Christmas tree size.
+
+    -	If the tree is cut at the end of December, later in the season, its needles as more chance to stay on the branches and for you to keep your tree longer in the house.
+
+    -	Christmas trees can be the host of a lot on unwanted critters and bugs. Make sure to shake it carefully before bringing in inside your home.
+
+  </main>
+
+  <footer>
+
+  </footer>
 
 </body>
 </html>
