--- a/orchard/products.html
+++ b/orchard/products.html
@@ -71,8 +71,8 @@
       <h2>Pumpkin Patch</h2>
       <p><time>Sept 27- Oct 23</time></p>
 
+<h3>Activities on the site</h3>
       <ul class="activities">
-        <h3>Activities on the site</h3>
         <li>Churros</li>
         <li>Bonfire</li>
         <li>Farm animals</li>
@@ -93,18 +93,32 @@
       </div>
     </section>
 
+    <section class="tree">
 
-    Christmas Tree Nov 27- Dec 23
+      <h2>  Christmas Tree</h2>
+      <p><time>Nov 27- Dec 23</time></p>
 
-    10 acres of Christmas tree! Come enjoy the magical tractor ride around the enchanted tree’s forest. Light and music will make this experience like no other!
+    <h3>Activities on the site</h3>
+      <ul class="christmas">
+        <li>Christmas music</li>
+        <li>Bonfire</li>
+        <li>Farm animals</li>
+        <li>Hot Chocolate</li>
+      </ul>
 
-    Fun facts about Christmas Trees
+      <div class="christmastree">
 
-    -	A Fraser fir tree can take up to 8 years to grow to the size of 7 feet tall, which is the average Christmas tree size.
+        <p>10 acres of Christmas tree! Come enjoy the magical tractor ride around the enchanted tree’s forest. Light and music will make this experience like no other!</p>
 
-    -	If the tree is cut at the end of December, later in the season, its needles as more chance to stay on the branches and for you to keep your tree longer in the house.
+        <h3>Fun Facts about Christmas Trees</h3>
+        <ul>
+          <li>A Fraser fir tree can take up to 8 years to grow to the size of 7 feet tall, which is the average Christmas tree size.</li>
+          <li>If the tree is cut at the end of December, later in the season, its needles as more chance to stay on the branches and for you to keep your tree longer in the house.</li>
+          <li>Christmas trees can be the host of a lot on unwanted critters and bugs. Make sure to shake it carefully before bringing in inside your home.</li>
+        </ul>
 
-    -	Christmas trees can be the host of a lot on unwanted critters and bugs. Make sure to shake it carefully before bringing in inside your home.
+      </div>
+    </section>
 
   </main>
 
