Add content to my about us page

--- a/orchard/about.html
+++ b/orchard/about.html
@@ -1,12 +1,45 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>About us</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link href="../css/main.css" rel="stylesheet">
-  </head>
-  <body>
+<head>
+  <meta charset="utf-8">
+  <title>About us</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link href="../css/main.css" rel="stylesheet">
+</head>
 
-  </body>
+
+<body>
+
+  <header>
+
+    <nav role="navigation">
+      <ul>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="#">Buy Ticket</a></li>
+      </ul>
+    </nav>
+
+    <div class="banner2">
+      <h1>Ottawa Orchard</h1>
+      <img src="" alt="banner image">
+    </div>
+
+  </header>
+
+  <main>
+
+    <p>Ottawa Orchard has been there for 200 years and been passed from one generation to another. The knowledge about the field and the products we grow, the goodwill and the convivial atmosphere of the place makes Ottawa Orchard like no other place. We want our customer to feel like family and want to come celebrate the picking season with us every year. We want everyone to book their visit in advance so we can offer the best experience to everyone, by keeping a reasonable amount of people on the site at the same time.
+    </p>
+
+  </main>
+
+  <footer role="complementary">
+    <div class="footer">
+      <p>Can wait to see you!</p>
+      <h3>Ottawa ORCHARD</h3>
+      <img src="#" alt="image of the logo">
+    </div>
+  </footer>
+
+</body>
 </html>
