--- a/orchard/products.html
+++ b/orchard/products.html
@@ -71,7 +71,7 @@
       <h2>Pumpkin Patch</h2>
       <p><time>Sept 27- Oct 23</time></p>
 
-<h3>Activities on the site</h3>
+      <h3>Activities on the site</h3>
       <ul class="activities">
         <li>Churros</li>
         <li>Bonfire</li>
@@ -98,7 +98,7 @@
       <h2>  Christmas Tree</h2>
       <p><time>Nov 27- Dec 23</time></p>
 
-    <h3>Activities on the site</h3>
+      <h3>Activities on the site</h3>
       <ul class="christmas">
         <li>Christmas music</li>
         <li>Bonfire</li>
@@ -122,8 +122,12 @@
 
   </main>
 
-  <footer>
-
+  <footer role="complementary">
+    <div class="footer">
+      <p>Can wait to see you!</p>
+      <h3>Ottawa ORCHARD</h3>
+      <img src="#" alt="image of the logo">
+    </div>
   </footer>
 
 </body>
