--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </nav>
 
     <div class="banner" role="banner">
-      <img src="" alt="">
+      <img src="images/lots-of-apples.jpg" alt="an image of many apples piles together">
       <h1>OTTAWA ORCHARD</h1>
       <p>Come join us to enjoy the best time of the season at the Ottawa Orchard. Fun for Everyone!
         Reserve your visit</p>
@@ -34,19 +34,19 @@
       <section class="cards">
         <ol>
           <li>
-            <img src="" alt="">
+            <img src="images/apple.png" alt="an image of a hand holding an apple">
             <a href="#"><h2>Apple Picking</h2></a>
             <p><time>Sept 3- Oct 23</time></p>
           </li>
 
           <li>
-            <img src="" alt="">
+            <img src="images/pumpkin card.png" alt="an image of a hand holding a little pumpkin">
             <a href="#"><h2>Pumpkin Patch</h2></a>
             <p><time>Sept 27-Oct 23</time></p>
           </li>
 
           <li>
-            <img src="" alt="">
+            <img src="images/branch.png" alt="an image of someone holding a christmas tree branch">
             <a href="#"><h2>Christmas Trees</h2></a>
             <p><time>Nov 27- Dec 23</time></p>
           </li>
