--- a/index.html
+++ b/index.html
@@ -19,13 +19,17 @@
       </ul>
     </nav>
 
-    <div class="banner" role="banner">
-      <img src="images/lots-of-apples.jpg" alt="an image of many apples piles together">
+<div class="banner" role="banner">
+<img src="images/lots-of-apples.jpg" alt="an image of many apples piles together">
+
+    <div class="text-banner">
       <h1>OTTAWA ORCHARD</h1>
       <p>Come join us to enjoy the best time of the season at the Ottawa Orchard. Fun for Everyone!
         Reserve your visit</p>
-        <a href="#">Reserve your visit</a>
     </div>
+
+<a href="#">Reserve your visit</a>
+</div>
 
   </header>
 
