--- a/index.html
+++ b/index.html
@@ -19,37 +19,37 @@
       </ul>
     </nav>
 
-<div class="banner" role="banner">
-<img src="images/lots-of-apples.jpg" alt="an image of many apples piles together">
+    <div class="banner" role="banner">
+      <img src="images/lots-of-apples.jpg" alt="an image of many apples piles together">
 
-    <div class="text-banner">
-      <h1>OTTAWA ORCHARD</h1>
-      <p>Come join us to enjoy the best time of the season at the Ottawa Orchard. Fun for Everyone!
-        Reserve your visit</p>
-    </div>
+      <div class="text-banner">
+        <h1>OTTAWA ORCHARD</h1>
+        <p>Come join us to enjoy the best time of the season at the Ottawa Orchard. Fun for Everyone!
+          Reserve your visit</p>
+        </div>
 
-<a href="#">Reserve your visit</a>
-</div>
+        <a href="#">Reserve your visit</a>
+      </div>
 
-  </header>
+    </header>
 
     <main role="main">
 
       <section class="cards">
         <ol>
-          <li>
+          <li class="card1">
             <img src="images/apple.png" alt="an image of a hand holding an apple">
             <a href="#"><h2>Apple Picking</h2></a>
             <p><time>Sept 3- Oct 23</time></p>
           </li>
 
-          <li>
+          <li class="card2">
             <img src="images/pumpkin card.png" alt="an image of a hand holding a little pumpkin">
             <a href="#"><h2>Pumpkin Patch</h2></a>
             <p><time>Sept 27-Oct 23</time></p>
           </li>
 
-          <li>
+          <li class="card3">
             <img src="images/branch.png" alt="an image of someone holding a christmas tree branch">
             <a href="#"><h2>Christmas Trees</h2></a>
             <p><time>Nov 27- Dec 23</time></p>
@@ -72,7 +72,7 @@
           <img src="" alt="Image of a map to situate where the Orchard is">
         </div>
 
-      </main>
+    </main>
 
       <footer role="complementary">
         <div class="footer">
