Finish styling cards inside the main

--- a/index.html
+++ b/index.html
@@ -38,19 +38,19 @@
       <section class="cards">
         <ol>
           <li class="card1">
-            <a href="#"><h2>Apple Picking</h2></a>
+            <a href="#"><h2>Apple <br> Picking</h2></a>
             <p><time>Sept 3- Oct 23</time></p>
             <img src="images/apple.png" alt="an image of a hand holding an apple">
           </li>
 
           <li class="card2">
-            <a href="#"><h2>Pumpkin Patch</h2></a>
+            <a href="#"><h2>Pumpkin <br> Patch</h2></a>
             <p><time>Sept 27-Oct 23</time></p>
             <img src="images/pumpkin card.png" alt="an image of a hand holding a little pumpkin">
           </li>
 
           <li class="card3">
-            <a href="#"><h2>Christmas Trees</h2></a>
+            <a href="#"><h2>Christmas <br> Trees</h2></a>
             <p><time>Nov 27- Dec 23</time></p>
             <img src="images/branch.png" alt="an image of someone holding a christmas tree branch">
           </li>
