Create the style of my button

--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
           Reserve your visit</p>
         </div>
 
-        <a href="#">Reserve your visit</a>
+        <div class="button">
+          <a href="#">Reserve your visit</a>
+        </div>
+
       </div>
 
     </header>
