Style the contact section on the main page

--- a/index.html
+++ b/index.html
@@ -62,17 +62,17 @@
       </section>
 
       <div class="contact">
-        <address class="contact">
-          Contact Us <br>
+        <p>Contact Us</p>
+          <address class="address">
           742 Applewood Street <br>
           Ottawa, Ontario, Canada <br>
           JP2 6y8 <br>
-        </address>
+          </address>
 
         <p>Open from Monday to Friday, 10am to 5pm <br>
           Saturday, Sunday, 9am to 6 pm</p>
 
-          <img src="" alt="Image of a map to situate where the Orchard is">
+        <img src="#" alt="Image of a map to situate where the Orchard is">
         </div>
 
     </main>
