Create a product.css page to style my product page

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <footer role="complementary">
         <div class="footer">
           <h3>Ottawa ORCHARD</h3>
-          <p>Can wait to see you!</p>
+          <p>Can't wait to see you!</p>
         </div>
       </footer>
 
