--- a/orchard/products.html
+++ b/orchard/products.html
@@ -5,6 +5,7 @@
   <title>Products</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="../css/main.css" rel="stylesheet">
+  <link href="../css/products.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,700;0,900;1,400&display=swap" rel="stylesheet">
 </head>
 
@@ -21,7 +22,6 @@
 
     <div class="banner2">
       <h1>Ottawa Orchard</h1>
-      <img src="" alt="banner image">
     </div>
 
   </header>
@@ -62,6 +62,10 @@
           <dd>Early September</dd>
           <dd>The Lobo keeps its shape during cooking and is a bit more acidic, less sweet. That makes a good choice to make pies and crumbles.</dd>
         </dl>
+
+        <div class="button">
+          <a href="#">Reserve your visit</a>
+        </div>
 
       </div>
     </section>
