Add the banner image in the css instead of the html

--- a/index.html
+++ b/index.html
@@ -20,13 +20,12 @@
     </nav>
 
     <div class="banner" role="banner">
-      <img src="images/lots-of-apples.jpg" alt="an image of many apples piles together">
+      <!-- <img src="images/lots-of-apples.jpg" alt="an image of many apples piles together"> -->
 
       <div class="text-banner">
         <h1>OTTAWA ORCHARD</h1>
         <p>Come join us to enjoy the best time of the season at the Ottawa Orchard. Fun for Everyone!
           Reserve your visit</p>
-        </div>
 
         <div class="button">
           <a href="#">Reserve your visit</a>
