--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <h1>OTTAWA ORCHARD</h1>
         <p>Come join us to enjoy the best time of the season at the Ottawa Orchard. Fun for Everyone!
           Reserve your visit</p>
+      </div>
 
         <div class="button">
           <a href="#">Reserve your visit</a>
