Create the style of the first card in product page

--- a/orchard/products.html
+++ b/orchard/products.html
@@ -30,10 +30,10 @@
 
     <section class="apple">
 
-      <h2>Apple picking</h2>
-      <p><time>Sept 3- Oct 23</time></p>
+      <h2>Apple Picking</h2>
 
       <ul class="activities">
+        <p><time>Sept 3- Oct 23</time></p>
         <h3>Activities on the site</h3>
         <li>Churros</li>
         <li>Bonfire</li>
