Style the apple card for the small screen product page

--- a/orchard/products.html
+++ b/orchard/products.html
@@ -43,7 +43,7 @@
 
       <div class="applepicking">
 
-        <h3>Our delicious Apple varieties</h3>
+        <h3>Our Delicious Apple Varieties</h3>
 
         <dl class="mcintosh">
           <dt>McIntosh</dt>
