Change the css code to adapt for the pumpkin cards

--- a/orchard/products.html
+++ b/orchard/products.html
@@ -74,10 +74,10 @@
     <section class="pumpkin">
 
       <h2>Pumpkin Patch</h2>
-      <p><time>Sept 27- Oct 23</time></p>
 
-      <h3>Activities on the site</h3>
       <ul class="activities">
+        <p><time>Sept 27- Oct 23</time></p>
+        <h3>Activities on the site</h3>
         <li>Churros</li>
         <li>Bonfire</li>
         <li>Farm animals</li>
@@ -95,16 +95,20 @@
           <li>Pumpkins were once considered a remedy for freckles and snakebites.</li>
         </ul>
 
+        <div class="button">
+          <a href="#">Reserve your visit</a>
+        </div>
+
       </div>
     </section>
 
     <section class="tree">
 
       <h2>  Christmas Tree</h2>
-      <p><time>Nov 27- Dec 23</time></p>
 
-      <h3>Activities on the site</h3>
       <ul class="christmas">
+        <p><time>Nov 27- Dec 23</time></p>
+        <h3>Activities on the site</h3>
         <li>Christmas music</li>
         <li>Bonfire</li>
         <li>Farm animals</li>
@@ -121,6 +125,10 @@
           <li>If the tree is cut at the end of December, later in the season, its needles as more chance to stay on the branches and for you to keep your tree longer in the house.</li>
           <li>Christmas trees can be the host of a lot on unwanted critters and bugs. Make sure to shake it carefully before bringing in inside your home.</li>
         </ul>
+
+        <div class="button">
+          <a href="#">Reserve your visit</a>
+        </div>
 
       </div>
     </section>
