--- a/orchard/about.html
+++ b/orchard/about.html
@@ -5,6 +5,7 @@
   <title>About us</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="../css/main.css" rel="stylesheet">
+  <link href="../css/about.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,700;0,900;1,400&display=swap" rel="stylesheet">
 </head>
 
@@ -22,7 +23,6 @@
 
     <div class="banner2">
       <h1>Ottawa Orchard</h1>
-      <img src="" alt="banner image">
     </div>
 
   </header>
