Make the links work for each cards in the index.html

--- a/orchard/products.html
+++ b/orchard/products.html
@@ -28,7 +28,7 @@
 
   <main>
 
-    <section class="apple">
+    <section class="apple" id="apple">
 
       <h2>Apple Picking</h2>
 
@@ -71,7 +71,7 @@
     </section>
 
 
-    <section class="pumpkin">
+    <section class="pumpkin" id="pumpkin">
 
       <h2>Pumpkin Patch</h2>
 
@@ -102,7 +102,7 @@
       </div>
     </section>
 
-    <section class="tree">
+    <section class="tree" id="tree">
 
       <h2>  Christmas Tree</h2>
 
