Add the logo in the navigation

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         <li><a href="orchard/products.html">Products</a></li>
         <li><a href="orchard/about.html">About us</a></li>
       </ul>
+
+      <img class="logo" src="images/logo-white.svg" alt="image of the logo of Ottawa Orchard">
+
     </nav>
 
     <div class="banner" role="banner">
@@ -72,7 +75,7 @@
         <p>Open from Monday to Friday, 10am to 5pm <br>
           Saturday, Sunday, 9am to 6 pm</p>
 
-        <img src="#" alt="Image of a map to situate where the Orchard is">
+        <img class="logo2" src="images/logo-small.svg" alt="image of the logo of Ottawa Orchard">
         </div>
 
     </main>
