--- a/orchard/products.html
+++ b/orchard/products.html
@@ -24,6 +24,8 @@
       <h1>Ottawa Orchard</h1>
     </div>
 
+<img class="logo" src="../images/logo-white.svg" alt="image of the logo of Ottawa Orchard">
+
   </header>
 
   <main>
