--- a/orchard/products.html
+++ b/orchard/products.html
@@ -20,7 +20,7 @@
       </ul>
     </nav>
 
-    <div class="banner2">
+    <div class="banner2" role="banner">
       <h1>Ottawa Orchard</h1>
     </div>
 
@@ -28,7 +28,7 @@
 
   </header>
 
-  <main>
+  <main role="main">
 
     <section class="apple" id="apple">
 
