Add aria-label button

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           Reserve your visit</p>
       </div>
 
-        <div class="button">
+        <div class="button" role="button">
           <a href="#">Reserve your visit</a>
         </div>
 
