--- a/orchard/products.html
+++ b/orchard/products.html
@@ -65,7 +65,7 @@
           <dd>The Lobo keeps its shape during cooking and is a bit more acidic, less sweet. That makes a good choice to make pies and crumbles.</dd>
         </dl>
 
-        <div class="button">
+        <div class="button" role="button">
           <a href="#">Reserve your visit</a>
         </div>
 
@@ -97,7 +97,7 @@
           <li>Pumpkins were once considered a remedy for freckles and snakebites.</li>
         </ul>
 
-        <div class="button">
+        <div class="button" role="button">
           <a href="#">Reserve your visit</a>
         </div>
 
@@ -128,7 +128,7 @@
           <li>Christmas trees can be the host of a lot on unwanted critters and bugs. Make sure to shake it carefully before bringing in inside your home.</li>
         </ul>
 
-        <div class="button">
+        <div class="button" role="button">
           <a href="#">Reserve your visit</a>
         </div>
 
