Correct the indentations in all pages

--- a/orchard/products.html
+++ b/orchard/products.html
@@ -24,7 +24,7 @@
       <h1>Ottawa Orchard</h1>
     </div>
 
-<img class="logo" src="../images/logo-white.svg" alt="image of the logo of Ottawa Orchard">
+    <img class="logo" src="../images/logo-white.svg" alt="image of the logo of Ottawa Orchard">
 
   </header>
 
@@ -47,7 +47,7 @@
 
         <h3>Our Delicious Apple Varieties</h3>
 
-        <dl class="mcintosh">
+        <dl class="mcintosh" role="list">
           <dt>McIntosh</dt>
           <dd>Mid-September to End of September</dd>
           <dd>Tasty and juicy, those apples are perfect for juice and cider. Because of its soft flesh it is also a good option for pies and apple sauce.</dd>
@@ -91,7 +91,7 @@
         <p>6 acres of pumpkins! Come enjoy the tractor ride around the field and choose the perfect pumpkins for your family.</p>
 
         <h3>Fun Facts about Pumpkins</h3>
-        <ul>
+        <ul role="list">
           <li>The word pumpkin comes from the Greek word, pepon, which means a large melon.</li>
           <li>The latest U.S. record (2019) for the largest pumpkin ever grown weighed in at 2,517.5 pounds.</li>
           <li>Pumpkins were once considered a remedy for freckles and snakebites.</li>
@@ -122,7 +122,7 @@
         <p>10 acres of Christmas tree! Come enjoy the magical tractor ride around the enchanted tree’s forest. Light and music will make this experience like no other!</p>
 
         <h3>Fun Facts about Christmas Trees</h3>
-        <ul>
+        <ul role="list">
           <li>A Fraser fir tree can take up to 8 years to grow to the size of 7 feet tall, which is the average Christmas tree size.</li>
           <li>If the tree is cut at the end of December, later in the season, its needles as more chance to stay on the branches and for you to keep your tree longer in the house.</li>
           <li>Christmas trees can be the host of a lot on unwanted critters and bugs. Make sure to shake it carefully before bringing in inside your home.</li>
