Rename my image pumpkin-card to follow right convention

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <li class="card2">
             <a href="orchard/products.html#pumpkin"><h2>Pumpkin <br> Patch</h2></a>
             <p><time>Sept 27-Oct 23</time></p>
-            <img src="images/pumpkin card.png" alt="an image of a hand holding a little pumpkin">
+            <img src="images/pumpkin-card.png" alt="an image of a hand holding a little pumpkin">
           </li>
 
           <li class="card3">
