--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Ottawa Orchard</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
-  <link rel="icon" type="image/png "href="favicon-196.png">
+  <link rel="icon" type="image/png" href="favicon-196.png">
   <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,700;0,900;1,400&display=swap" rel="stylesheet">
 </head>
 
@@ -28,66 +28,65 @@
 
       <div class="text-banner">
         <h1>OTTAWA ORCHARD</h1>
-        <p>Come join us to enjoy the best time of the season at the Ottawa Orchard. Fun for Everyone!
-          Reserve your visit</p>
+        <p>Come join us to enjoy the best time of the season at the Ottawa Orchard. Fun for Everyone! Reserve your visit</p>
       </div>
 
-        <div class="button" role="button">
-          <a href="#">Reserve your visit</a>
-        </div>
-
+      <div class="button">
+        <a role="button" href="#">Reserve your visit</a>
       </div>
 
-    </header>
+    </div>
 
-    <main role="main">
+  </header>
 
-      <section class="cards">
-        <ol>
-          <li class="card1">
-            <a href="orchard/products.html#apple"><h2>Apple <br> Picking</h2></a>
-            <p><time>Sept 3- Oct 23</time></p>
-            <img src="images/apple.png" alt="an image of a hand holding an apple">
-          </li>
+  <main role="main">
 
-          <li class="card2">
-            <a href="orchard/products.html#pumpkin"><h2>Pumpkin <br> Patch</h2></a>
-            <p><time>Sept 27-Oct 23</time></p>
-            <img src="images/pumpkin-card.png" alt="an image of a hand holding a little pumpkin">
-          </li>
+    <section class="cards">
+      <ol>
+        <li class="card1">
+          <a href="orchard/products.html#apple"><h2>Apple <br> Picking</h2></a>
+          <p>Sept 3-Oct 23</p>
+          <img src="images/apple.png" alt="an image of a hand holding an apple">
+        </li>
 
-          <li class="card3">
-            <a href="orchard/products.html#tree"><h2>Christmas <br> Trees</h2></a>
-            <p><time>Nov 27- Dec 23</time></p>
-            <img src="images/branch.png" alt="an image of someone holding a christmas tree branch">
-          </li>
-        </ol>
+        <li class="card2">
+          <a href="orchard/products.html#pumpkin"><h2>Pumpkin <br> Patch</h2></a>
+          <p>Sept 27-Oct 23</p>
+          <img src="images/pumpkin-card.png" alt="an image of a hand holding a little pumpkin">
+        </li>
 
-      </section>
+        <li class="card3">
+          <a href="orchard/products.html#tree"><h2>Christmas <br> Trees</h2></a>
+          <p>Nov 27-Dec 23</p>
+          <img src="images/branch.png" alt="an image of someone holding a christmas tree branch">
+        </li>
+      </ol>
 
-      <div class="contact">
-        <p>Contact Us</p>
-          <address class="address">
-          742 Applewood Street <br>
-          Ottawa, Ontario, Canada <br>
-          JP2 6y8 <br>
-          </address>
+    </section>
 
-        <p>Open from Monday to Friday, 10am to 5pm <br>
-          Saturday, Sunday, 9am to 6 pm</p>
+    <div class="contact">
+      <p>Contact Us</p>
+      <address class="address">
+        742 Applewood Street <br>
+        Ottawa, Ontario, Canada <br>
+        JP2 6y8 <br>
+      </address>
+
+      <p>Open from Monday to Friday, 10am to 5pm <br>
+        Saturday, Sunday, 9am to 6 pm</p>
 
         <img class="logo2" src="images/logo-small.svg" alt="image of the logo of Ottawa Orchard">
-        </div>
+      </div>
 
     </main>
 
-      <footer role="complementary">
-        <div class="footer">
-          <h3>Ottawa ORCHARD</h3>
-          <p>Can't wait to see you!</p>
-        </div>
-      </footer>
+    <footer role="contentinfo">
+      <div class="footer">
+        <h3>Ottawa ORCHARD</h3>
+        <p>Can't wait to see you!</p>
+      </div>
+    </footer>
 
-    </body>
+  </body>
 
-    </html>
+  </html>
