Fix some indentation in index.html

--- a/index.html
+++ b/index.html
@@ -72,21 +72,20 @@
         JP2 6y8 <br>
       </address>
 
-      <p>Open from Monday to Friday, 10am to 5pm <br>
-        Saturday, Sunday, 9am to 6 pm</p>
+      <p>Open from Monday to Friday, 10am to 5pm <br>Saturday, Sunday, 9am to 6 pm</p>
 
-        <img class="logo2" src="images/logo-small.svg" alt="image of the logo of Ottawa Orchard">
-      </div>
+      <img class="logo2" src="images/logo-small.svg" alt="image of the logo of Ottawa Orchard">
+    </div>
 
-    </main>
+  </main>
 
-    <footer role="contentinfo">
-      <div class="footer">
-        <h3>Ottawa ORCHARD</h3>
-        <p>Can't wait to see you!</p>
-      </div>
-    </footer>
+  <footer role="contentinfo">
+    <div class="footer">
+      <h3>Ottawa ORCHARD</h3>
+      <p>Can't wait to see you!</p>
+    </div>
+  </footer>
 
-  </body>
+</body>
 
-  </html>
+</html>
