--- a/index.html
+++ b/index.html
@@ -10,9 +10,19 @@
 </head>
 
 <body>
+
+  <ul class="skip-links">
+    <li>
+      <a href="#nav">Skip to Main Navigation</a>
+    </li>
+    <li>
+      <a href="##main">Skip to Main</a>
+    </li>
+  </ul>
+
   <header>
 
-    <nav role="navigation">
+    <nav id="nav" role="navigation">
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="orchard/products.html">Products</a></li>
@@ -39,7 +49,7 @@
 
   </header>
 
-  <main role="main">
+  <main id="main" role="main">
 
     <section class="cards">
       <ol>
