Style the skip-links in the main.css

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <a href="#nav">Skip to Main Navigation</a>
     </li>
     <li>
-      <a href="##main">Skip to Main</a>
+      <a href="#main">Skip to Main</a>
     </li>
   </ul>
 
