Add the favicon tag to each html pages

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </li>
   </ul>
 
-  <header>
+  <header role="banner">
 
     <nav id="nav" role="navigation">
       <ul>
@@ -33,7 +33,7 @@
 
     </nav>
 
-    <div class="banner" role="banner">
+    <div class="banner">
       <!-- <img src="images/lots-of-apples.jpg" alt="an image of many apples piles together"> -->
 
       <div class="text-banner">
