--- a/orchard/about.html
+++ b/orchard/about.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="../css/main.css" rel="stylesheet">
   <link href="../css/about.css" rel="stylesheet">
+  <link rel="icon" type="image/png" href="favicon-196.png">
   <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,700;0,900;1,400&display=swap" rel="stylesheet">
 </head>
 
