Add the 2nd link for favicon and remove duplicate in main.css

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Ottawa Orchard</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
+  <link rel="shortcut icon" href="favicon.ico">
   <link rel="icon" type="image/png" href="favicon-196.png">
   <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,700;0,900;1,400&display=swap" rel="stylesheet">
 </head>
@@ -42,7 +43,7 @@
       </div>
 
       <div class="button">
-        <a role="button" href="#">Reserve your visit</a>
+        <a href="#">Reserve your visit</a>
       </div>
 
     </div>
