Adjust spacing, padding and font-size on the product page

--- a/orchard/products.html
+++ b/orchard/products.html
@@ -37,7 +37,7 @@
       <h2>Apple Picking</h2>
 
       <ul class="activities">
-        <p><time>Sept 3- Oct 23</time></p>
+        <p>Sept 3-Oct 23</p>
         <h3>Activities on the site</h3>
         <li>Churros</li>
         <li>Bonfire</li>
@@ -80,7 +80,7 @@
       <h2>Pumpkin Patch</h2>
 
       <ul class="activities">
-        <p><time>Sept 27- Oct 23</time></p>
+        <p>Sept 27-Oct 23</p>
         <h3>Activities on the site</h3>
         <li>Churros</li>
         <li>Bonfire</li>
@@ -108,10 +108,10 @@
 
     <section class="tree" id="tree">
 
-      <h2>  Christmas Tree</h2>
+      <h2>Christmas Tree</h2>
 
       <ul class="christmas">
-        <p><time>Nov 27- Dec 23</time></p>
+        <p>Nov 27-Dec 23</p>
         <h3>Activities on the site</h3>
         <li>Christmas music</li>
         <li>Bonfire</li>
