Add image of the logo on the about page

--- a/orchard/about.html
+++ b/orchard/about.html
@@ -40,7 +40,7 @@
     <div class="footer">
       <p>Can wait to see you!</p>
       <h3>Ottawa ORCHARD</h3>
-      <img src="#" alt="image of the logo">
+      <img src="favicon-196.png" alt="image of the logo of Ottawa Orchard">
     </div>
   </footer>
 
