--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link href="css/main.css" rel="stylesheet">
   <link rel="shortcut icon" href="favicon.ico">
   <link rel="icon" type="image/png" href="favicon-196.png">
+  <link type="text/plain" rel="author" href="human.txt">
   <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,700;0,900;1,400&display=swap" rel="stylesheet">
 </head>
 
